--- a/index.html
+++ b/index.html
@@ -107,11 +107,35 @@
 		<img src="https://assets.codepen.io/1462889/fcy.png" alt="">
 	</a>
 
+    <!-------Seksioni About------->
+    <section id="about">
+        <h1 class="h1">Try a new <br> way of reality</h1>
+        <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+            Soluta numquam eligendi odit ex molestias ducimus officiis <br>
+             aperiam aliquam! Quia sed tempora explicabo voluptates ut aliquid <br>
+              tempore illum modi veniam magnam.</p>
+       </section>
+   
+       <script>
+           ScrollReveal({
+       reset: true,
+       distance: '60px',
+       duration: 2400,
+       delay: 400
+   
+   });
+   
+   
+   ScrollReveal().reveal('.h1', {delay: 400, duration: 1500, origin:'left' });
+   ScrollReveal().reveal('.p', {delay: 400, duration: 1500, origin:'left' });
+       </script>
+
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="style.js"></script>
-
+    <script src="main.js"></script>
 </body>
 </html>
