--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<div class="col-12">
 					<nav class="navbar navbar-expand-md navbar-light">
 					
-						<a class="navbar-brand" href="https://front.codes/" target="_blank"><img src="logo.png" alt=""></a>	
+						<a class="navbar-brand" href="https://front.codes/" target="_blank"><img src="img/logo.png" alt=""></a>	
 						
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
@@ -72,20 +72,20 @@
 		</div>
 	</div>
 	<div class="section full-height">
-		<div class="absolute-center">
+		<img src="img/vr-1.webp" class="img1 ">
+        <div class="absolute-center">
 			<div class="section">
 				<div class="container">
 					<div class="row">
-						<div class="col-12">
-				<h1><span>B</span><span>o</span><span>o</span><span>t</span><span>s</span><span>t</span><span>r</span><span>a</span><span>p</span> <span>4</span><br>
-				<span>m</span><span>e</span><span>n</span><span>u</span></h1>
-				<p>scroll for nav animation</p>	
+						<div class="fix1">
+				<h1>The Virtual Reality Future</h1>
+				<p>Lorem Ipsum is simply dummy text of virtual</p>	
 						</div>	
 					</div>		
 				</div>		
 			</div>
 			<div class="section mt-5">
-				<div class="container">
+				<!-- <div class="container">
 					<div class="row">
 						<div class="col-12">
 							<div id="switch">
@@ -93,21 +93,15 @@
 							</div>
 						</div>	
 					</div>		
-				</div>			
+				</div>			 -->
 			</div>
 		</div>
 	</div>
 	<div class="my-5 py-5">
 	</div>
   
-<!-- Link to page
-================================================== -->
+   <!-- About  -->
 
-	<a href="https://front.codes/" class="logo" target="_blank">
-		<img src="https://assets.codepen.io/1462889/fcy.png" alt="">
-	</a>
-
-    <!-------Seksioni About------->
     <section id="about">
         <h1 class="h1">Try a new <br> way of reality</h1>
         <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
@@ -132,10 +126,20 @@
 
 
 
+
+
+<!-- Link to page
+================================================== -->
+
+	<a href="https://front.codes/" class="logo" target="_blank">
+		<img src="https://assets.codepen.io/1462889/fcy.png" alt="">
+	</a>
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="style.js"></script>
-    <script src="main.js"></script>
+
 </body>
 </html>
