--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+	<link rel="stylesheet" href="  https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body class="hero-anime">	
 
@@ -100,6 +101,22 @@
 	<div class="my-5 py-5">
 	</div>
   
+<!-----buy now-->
+
+<div class="button">
+	<h3>RATING</h3>
+	<i class="fa-solid fa-star"></i>
+	<i class="fa-solid fa-star"></i>
+	<i class="fa-solid fa-star"></i>
+	<i class="fa-solid fa-star"></i>
+	<i class="fa-solid fa-star-half-stroke"></i>
+	<p>4.2</p>
+	<a href="#">4.2 reviews</a>
+
+	<button><a href="">Buy now!</a></button>
+</div>
+
+
    <!-- About  -->
 
     <section id="about">
